--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+    <title>BestGames — игровой маркетплейс</title>
     <style>
         /* Переменные */
         :root {
@@ -25,10 +25,12 @@
             --base-font: 'Arial', sans-serif;
             --impact-font: 'Impact', Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 
-            --size-modulator: 2.2;
-            --card-width: calc(10rem * var(--size-modulator));
+            --card-size-modulator: 2.4;
+            --card-width: calc(10rem * var(--card-size-modulator));
             --card-ratio: 2 / 3;
             --card-height: calc(var(--card-width) * var(--card-ratio));
+            --header-height: 60px;
+            --tool-line-height: 40px;
         }
 
 
@@ -50,18 +52,12 @@
 
         /* Layout */
         .flex-container {
+            height: 100%;
             display: flex;
-            height: 100vh;
         }
 
         .block-container {
-            display: block;
-            height: 100%;
-            flex-direction: column;
-        }
-
-        .container {
-            height: 100%;
+            height: calc(100vh - var(--header-height) - var(--tool-line-height));
             display: block;
             flex-direction: column;
         }
@@ -77,6 +73,7 @@
             border-bottom: 1px solid var(--border);
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             user-select: none;
+            height: var(--header-height);
         }
 
         .header__left {
@@ -92,34 +89,56 @@
 
         /* Logo */
         .logo {
+            display: flex;
+            align-items: center;
+            justify-content: center;
             font-size: 24px;
-            margin-left: 2vh;
+            margin-right: 1vh;
+            max-height: 40px;
+            padding: 0;
+            /* background-color: #008f11; */
+        }
+
+        .logo img {
+            max-height: 40px;
+            max-width: auto;
+            vertical-align: middle;
+        }
+
+        /* Title */
+        .title {
+            font-size: 24px;
+        }
+
+        .title a {
+            text-decoration: none;
+            color: var(--light);
         }
 
 
-        /* Navigation */
-        .nav__list {
+        /* Alt Navigation */
+        /* .alt-nav__list {
             display: flex;
             gap: 20px;
             list-style: none;
         }
 
-        .nav__item {
+        .alt-nav__item {
             cursor: pointer;
             transition: color 0.1s;
         }
 
-        .nav__item:hover {
+        .alt-nav__item:hover {
             color: var(--secondary-green);
         }
 
-        .nav__item--active {
+        .alt-nav__item--active {
             color: var(--gray-secondary);
         }
 
-        .nav__item--active:hover {
+        .alt-nav__item--active:hover {
             color: var(--gray-secondary);
-        }
+        } */
 
 
         /* Burger */
@@ -135,7 +154,7 @@
         .burger__line {
             display: block;
             height: 4px;
-            background-color: rgb(250, 250, 250);
+            background-color: white;
             border-radius: 2px;
             transition: background-color 0.2s;
         }
@@ -148,12 +167,13 @@
         /* Tool-line + меню */
         .tool-line {
             display: flex;
-            justify-content: space-between;
+            justify-content: left;
             align-items: center;
             padding: 0.7rem;
             width: 100%;
             border-bottom: 1px solid var(--border);
             user-select: none;
+            height: var(--tool-line-height);
         }
 
         #toggle:checked+.menu {
@@ -161,42 +181,22 @@
         }
 
         .menu {
+            /* Пока не реализовано */
             margin: 20vh;
             position: absolute;
             display: none;
-            width: 4vh;
+            width: auto;
             height: 4vh;
-            background-color: #00ffb34d;
-        }
-
-
-        /* Left-panel */
-        .left-panel {
-            line-height: 210%;
-            padding: 2vh;
-            padding-left: 4vh;
-            min-height: auto;
-            width: 28vh;
-            background-color: #030708;
-            border-right: 1.7px var(--border) solid;
-            position: sticky;
-            top: 0;
-        }
-
-        .left-panel p:hover {
-            cursor: pointer;
-            color: var(--secondary-green);
-            transition: color 0.3s;
-        }
-
-        .left-panel p::before {
-            content: '◉ \00A0 \00A0';
-            font-size: 14px;
+            text-align: center;
+            vertical-align: middle;
+            padding: 0.5rem;
+            background-color: #00ffb31f;
         }
 
 
         /* Hero */
         .hero {
+            display: block;
             position: relative;
             margin: 0;
             padding: 0;
@@ -209,9 +209,10 @@
             display: block;
             text-align: center;
             top: 40%;
+            /* Ровно на -10% о центра */
             left: 50%;
             font-size: 3rem;
-            color: var(--primary-cyan);
+            color: var(--secondary-cyan);
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
             transform: translate(-50%, -50%);
             z-index: 2;
@@ -220,7 +221,8 @@
         .hero p {
             position: absolute;
             display: block;
-            top: 70%;
+            top: 60%;
+            /* Ровно на +10% о центра */
             left: 50%;
             font-size: 1.5rem;
             color: var(--light);
@@ -238,7 +240,7 @@
             margin: 0;
             padding: 0;
             background-image: url(./res/back.webp);
-            background-size: cover;
+            background-size: 100% auto;
             mask-image: linear-gradient(to top, black 0%, transparent 90%);
             -webkit-mask-image: linear-gradient(to bottom, black 0%, transparent 90%);
         }
@@ -247,8 +249,18 @@
         /* Cards */
         .card-container {
             margin: 0;
+            height: auto;
             display: flex;
-            height: 40%;
+            justify-content: center;
+            align-items: center;
+            /* Отладка */
+            /* background-color: #008f11; */
+            /* border: 2px solid var(--border); */
+        }
+
+        #first-card-container {
+            height: 50%;
+            /* margin-top: 2vh; */
         }
 
         .card-container * {
@@ -292,11 +304,55 @@
             left: -2vh;
             top: 2vh;
             display: flex;
+
             background-image: url(./res/grunge.webp);
             background-size: cover;
             mask-image: linear-gradient(to bottom, black 0%, transparent 100%);
             -webkit-mask-image: linear-gradient(to top, black 0%, transparent 90%);
         }
+
+        /* Navigation */
+        .nav__item {
+            position: relative;
+            /* display: inline-block; */
+            margin-left: 10rem;
+            padding: 0.4rem;
+            padding-left: 1rem;
+            padding-right: 1rem;
+            height: auto;
+            width: auto;
+            font-size: 18px;
+            cursor: pointer;
+            transition: color 0.1s;
+        }
+
+        .nav-dropdown {
+            display: none;
+            position: absolute;
+            align-content: center;
+            align-items: center;
+            justify-content: center;
+            top: 2.4em;
+            left: -4em;
+            width: 12rem;
+            background: var(--black);
+            border: 1px solid var(--border);
+            padding: 10px;
+            z-index: 10;
+        }
+
+        .nav__item:hover, .nav__item:hover .nav-dropdown {
+            display: flex;
+            color: var(--secondary-green);
+        }
+
+        /* .nav__item--active {
+            color: var(--gray-secondary);
+        }
+
+        .nav__item--active:hover {
+            color: var(--gray-secondary);
+        } */
 
 
         /* Разделительная линия */
@@ -311,34 +367,48 @@
         }
 
 
-        /* Тестовые блоки */
-        .test1 {
-            background-color: #093614;
-            height: 40%;
-        }
-
-        .test2 {
-            background-color: #7c0a7c;
-            height: 60%;
-        }
-
-
         /* Media */
         @media (max-width: 768px) {
-            .nav__list {
+            /* .alt-nav__list {
+                    display: none;
+                    flex-direction: column;
+                    gap: 10px;
+                    background-color: var(--dark-gray);
+                    position: absolute;
+                    top: 60px;
+                    right: 20px;
+                    padding: 10px;
+                    border-radius: 5px;
+                }
+
+                .alt-nav.alt-nav--open .alt-nav__list {
+                    display: flex;
+                } */
+
+
+            /* Left-panel */
+            .left-panel {
+                line-height: 210%;
+                padding: 2vh;
+                padding-left: 4vh;
+                min-height: auto;
+                width: 28vh;
+                background-color: #030708;
+                border-right: 1.7px var(--border) solid;
+                position: sticky;
+                top: 0;
                 display: none;
-                flex-direction: column;
-                gap: 10px;
-                background-color: var(--dark-gray);
-                position: absolute;
-                top: 60px;
-                right: 20px;
-                padding: 10px;
-                border-radius: 5px;
             }
 
-            .nav.nav--open .nav__list {
-                display: flex;
+            .left-panel p:hover {
+                cursor: pointer;
+                color: var(--secondary-green);
+                transition: color 0.3s;
+            }
+
+            .left-panel p::before {
+                content: '◉ \00A0 \00A0';
+                font-size: 14px;
             }
         }
     </style>
@@ -346,115 +416,113 @@
 </head>
 
 <body>
-    <section class="header">
+    <header class="header">
         <div class="header__left">
-            <div class="burger">
-                <span class="burger__line"></span>
-                <span class="burger__line"></span>
-                <span class="burger__line"></span>
+            <!-- <div class="burger">
+                    <span class="burger__line"></span>
+                    <span class="burger__line"></span>
+                    <span class="burger__line"></span>
+                </div> -->
+            <div class="logo">
+                <a href="#" aria-label="Ссылка на главную страницу">
+                    <img src="./res/logo-1.svg" alt="">
+                </a>
             </div>
-            <div class="logo">LOGO</div>
+            <div class="title">
+                <a href="#" aria-label="Ссылка на главную страницу">
+                    <p>BestGames</p>
+                </a>
+            </div>
         </div>
 
         <div class="header__right">
-            <nav class="nav">
-                <ul class="nav__list">
-                    <li class="nav__item nav__item--active">Главная</li>
-                    <li class="nav__item">О нас</li>
-                    <li class="nav__item">Контакты</li>
+            <!-- <nav class="alt-nav">
+                <ul class="alt-nav__list">
+                    <li class="alt-nav__item alt-nav__item--active">Главная</li>
+                    <li class="alt-nav__item">О нас</li>
+                    <li class="alt-nav__item">Контакты</li>
                 </ul>
+            </nav> -->
+            <div class="nav__item">
+                <p>Навигация</p>
+                <div class="nav-dropdown">
+                    <ul>
+                        <li>Поиск</li>
+                        <li>Войти</li>
+                        <li>Личный кабинет</li>
+                        <li>Каталог игр</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
+    <!-- <section class="flex-container"> -->
+    <section class="block-container">
+        <div class="tool-line">
+            <input id="toggle" type="checkbox" hidden>
+            <nav class="menu">
+                <div>
+                    Пока ничего нет
+                </div>
             </nav>
-        </div>
-    </section>
-
-
-    <section class="flex-container">
-        <div class="left-panel">
-            <p>пункт 1</p>
-            <p>пункт 2</p>
-            <p>пункт 3</p>
-            <p>пункт 4</p>
+            <label style="user-select: none;" for="toggle">alt menu</label>
         </div>
 
+        <div class="hero">
+            <h1>BestGames</h1>
+            <p>Лучший игровой маркетплейс России</p>
+            <div class="hero__image"></div>
+        </div>
 
-
-        <section class="block-container">
-            <div class="container">
-                <div class="tool-line">
-                    <input id="toggle" type="checkbox" hidden>
-                    <nav class="menu">
-                        <div>
-
-                        </div>
-                    </nav>
-                    <label style="user-select: none;" for="toggle">menu</label>
-                </div>
-
-                <div class="hero">
-                    <h1>[Название]</h1>
-                    <p>Лучший маркетплейс игр в России!</p>
-                    <div class="hero__image"></div>
-                </div>
-
-                <div class="card-container">
-                    <div class="card">
-                        <h2>Заголовок</h2>
-                        <div class="border"></div>
-                        <p>Текст карточки</p>
-                        <div class="card__image"></div>
-                    </div>
-
-                    <div class="card">
-                        <h2>Заголовок</h2>
-                        <div class="border"></div>
-                        <p>Текст карточки</p>
-                        <div class="card__image"></div>
-                    </div>
-
-                    <div class="card">
-                        <h2>Заголовок</h2>
-                        <div class="border"></div>
-                        <p>Текст карточки</p>
-                        <div class="card__image"></div>
-                    </div>
-                </div>
-
-                <div class="card-container">
-                    <div class="card">
-                        <h2>Заголовок</h2>
-                        <div class="border"></div>
-                        <p>Текст карточки</p>
-                        <div style="background-image: url(./res/mc.webp);" class="card__image"></div>
-                    </div>
-
-                    <div class="card">
-                        <h2>Заголовок</h2>
-                        <div class="border"></div>
-                        <p>Текст карточки</p>
-                        <div class="card__image"></div>
-                    </div>
-
-                    <div class="card">
-                        <h2>Заголовок</h2>
-                        <div class="border"></div>
-                        <p>Текст карточки</p>
-                        <div class="card__image"></div>
-                    </div>
-                </div>
+        <div id="first-card-container" class="card-container">
+            <div class="card">
+                <h2>Заголовок</h2>
+                <div class="border"></div>
+                <p>Текст карточки</p>
+                <div class="card__image"></div>
             </div>
-        </section>
 
+            <div class="card">
+                <h2>Заголовок</h2>
+                <div class="border"></div>
+                <p>Текст карточки</p>
+                <div class="card__image"></div>
+            </div>
 
+            <div class="card">
+                <h2>Заголовок</h2>
+                <div class="border"></div>
+                <p>Текст карточки</p>
+                <div class="card__image"></div>
+            </div>
+        </div>
+
+        <div class="card-container">
+            <div class="card">
+                <h2>Заголовок</h2>
+                <div class="border"></div>
+                <p>Текст карточки</p>
+                <div style="background-image: url(./res/mc.webp);" class="card__image"></div>
+            </div>
+
+            <div class="card">
+                <h2>Заголовок</h2>
+                <div class="border"></div>
+                <p>Текст карточки</p>
+                <div class="card__image"></div>
+            </div>
+
+            <div class="card">
+                <h2>Заголовок</h2>
+                <div class="border"></div>
+                <p>Текст карточки</p>
+                <div class="card__image"></div>
+            </div>
+        </div>
     </section>
-
-    <!-- <div style="display: inline; height: 100%; margin: 20vh; position: absolute; height: 60vh; width: 60vh; background-color: #0e5543; border: 2px #8f8f8f solid;">
-            <div class="test1">
-                <p></p>
-            </div>
-            <div class="test2"></div>
-        </div> -->
-
-
+    <!-- </section> -->
 
 
     <script>
