--- a/index.html
+++ b/index.html
@@ -341,7 +341,8 @@
             z-index: 10;
         }
 
-        .nav__item:hover, .nav__item:hover .nav-dropdown {
+        .nav__item:hover,
+        .nav__item:hover .nav-dropdown {
             display: flex;
             color: var(--secondary-green);
         }
@@ -457,9 +458,8 @@
         </div>
     </header>
 
-
     <!-- <section class="flex-container"> -->
-    <section class="block-container">
+    <main class="block-container">
         <div class="tool-line">
             <input id="toggle" type="checkbox" hidden>
             <nav class="menu">
@@ -470,58 +470,58 @@
             <label style="user-select: none;" for="toggle">alt menu</label>
         </div>
 
-        <div class="hero">
+        <section class="hero">
             <h1>BestGames</h1>
             <p>Лучший игровой маркетплейс России</p>
             <div class="hero__image"></div>
-        </div>
+        </section>
 
         <div id="first-card-container" class="card-container">
-            <div class="card">
+            <article class="card">
                 <h2>Заголовок</h2>
                 <div class="border"></div>
                 <p>Текст карточки</p>
                 <div class="card__image"></div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <h2>Заголовок</h2>
                 <div class="border"></div>
                 <p>Текст карточки</p>
                 <div class="card__image"></div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <h2>Заголовок</h2>
                 <div class="border"></div>
                 <p>Текст карточки</p>
                 <div class="card__image"></div>
-            </div>
+            </article>
         </div>
 
         <div class="card-container">
-            <div class="card">
+            <article class="card">
                 <h2>Заголовок</h2>
                 <div class="border"></div>
                 <p>Текст карточки</p>
                 <div style="background-image: url(./res/mc.webp);" class="card__image"></div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <h2>Заголовок</h2>
                 <div class="border"></div>
                 <p>Текст карточки</p>
                 <div class="card__image"></div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <h2>Заголовок</h2>
                 <div class="border"></div>
                 <p>Текст карточки</p>
                 <div class="card__image"></div>
-            </div>
+            </article>
         </div>
-    </section>
+    </main>
     <!-- </section> -->
 
 
